<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.jisho</groupId>
	<artifactId>TextosJapones</artifactId>
	<version>0.0.5-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>TextosJapones</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>14</maven.compiler.source>
		<maven.compiler.target>14</maven.compiler.target>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>org.jisho.textosJapones.App</mainClass>
						</manifest>
					</archive>

					<options>
						<option>--add-exports</option>
						<option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
						<option>--add-exports</option>
						<option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
						<option>--add-exports</option>
						<option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
						<option>--add-exports</option>
						<option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.glass.ui=nativejavafx.taskbar</option>
						<option>--add-opens</option>
						<option>java.base/java.lang.reflect=com.jfoenix</option>
					</options>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>org.jisho.textosJapones.App</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<!-- Barra de progresso do windows -->
		<dependency>
			<groupId>com.github.Dansoftowner</groupId>
			<artifactId>FXTaskbarProgressBar</artifactId>
			<version>v11.2.7</version>
		</dependency>

		<!-- Bibliotecas para animacao no javafx -->
		<dependency>
			<groupId>io.github.typhon0</groupId>
			<artifactId>AnimateFX</artifactId>
			<version>1.2.1</version>
		</dependency>

		<!-- Botoes e componentes estilizados para o javafx -->
		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>9.0.10</version>
		</dependency>

		<!-- Biblioteca JavaFX Base -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>16</version>
		</dependency>

		<!-- Biblioteca JavaFX Graphics -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>16</version>
		</dependency>

		<!-- Biblioteca JavaFX Controle -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>16</version>
		</dependency>

		<!-- Bibliotecas para animacao no javafx -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>16</version>
		</dependency>

		<!-- Biblioteca JavaFX WebView -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>16</version>
		</dependency>

		<!-- Biblioteca para popup -->
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.1.0</version>
		</dependency>

		<!-- MySQL -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.20</version>
		</dependency>

		<!-- Sudachi - Japones dictionary -->
		<dependency>
			<groupId>com.worksap.nlp</groupId>
			<artifactId>sudachi</artifactId>
			<version>0.5.2</version>
		</dependency>

		<!-- JSoup, parse html para document -->
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.13.1</version>
		</dependency>

		<!-- Guava, usado para o plano cartesiano -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>30.1-jre</version>
		</dependency>

		<!-- Json - api jisho -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20201115</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.6</version>
		</dependency>

	</dependencies>
</project>
